
name:               galaxy-break
version:            0.0.1
synopsis:           A game of adventure in a fanciful galaxy.
author:             Lokathor
license:            AGPL
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
    default-language:   Haskell2010
    other-extensions:   QuasiQuotes,
                        TemplateHaskell
    hs-source-dirs:     lib
    exposed-modules:    Control.Console
    build-depends:      base,
                        inline-c
    if os(windows)
        other-modules:  Control.Console.Win32
        cpp-options:    -DWin32flag
        c-sources:      lib/Control/Console/Win32.c

executable galaxy
    default-language:   Haskell2010
    --other-extensions:   none
    hs-source-dirs:     src
    main-is:            Main.hs
    build-depends:      base,
                        galaxy-break
