
name:               galaxy-break
version:            0.0.3
synopsis:           A game of adventure in a fanciful galaxy.
author:             Lokathor
license:            AGPL
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
    default-language:   Haskell2010
    other-extensions:   QuasiQuotes,
                        TemplateHaskell
    hs-source-dirs:     lib
    exposed-modules:    ConcurrentConsole,
                        PCGen
    build-depends:      base,
                        ghc-prim,
                        inline-c,
                        random,
                        MonadRandom,
                        vector,
                        containers,
                        deepseq
    if os(windows)
        other-modules:  ConcurrentConsole.Win32
        cpp-options:    -DWin32flag
        c-sources:      lib/ConcurrentConsole/Win32.c
    if arch(x86_64)
        cpp-options:    -DSixtyFourBit

executable galaxy
    default-language:   Haskell2010
    --other-extensions:   none
    hs-source-dirs:     src
    main-is:            Main.hs
    build-depends:      base,
                        galaxy-break,
                        async,
                        random,
                        MonadRandom
    ghc-options:        -threaded

test-suite alltests
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Tests.hs
    other-modules:      PCGenTests
    build-depends:      hspec,
                        QuickCheck,
                        galaxy-break,
                        base,
                        random,
                        MonadRandom,
                        containers,
                        mtl
    if arch(x86_64)
        cpp-options: -DSixtyFourBit
